--- a/src/static/index.html
+++ b/src/static/index.html
@@ -7,6 +7,12 @@
     <meta name="description" content="Elm Webpack Starter"/>
     <meta name="author" content="Peter Morawiec"/>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+    <!-- Google Fonts -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+<!-- CSS Reset -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.2.4/milligram.min.css">
+
   </head>
   <body>
     <div id="main"></div>
